--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,7 +103,6 @@ h1, h2, h3, #logo{
 
 #center-about {
     width: 33%;
-    background: rgb(181, 204, 160);
     margin: 0 auto;
 }
 #right-about {
@@ -118,7 +117,7 @@ hr {
     width: 100%;
 }
 
-.left-about-header {
+.left-about-heading {
     width: 60%;
     float: right;
     line-height: 20px;
@@ -126,10 +125,35 @@ hr {
     margin-bottom: 50px;
 }
 
-.right-about-header {
+.right-about-heading {
     width: 60%;
     float: left;
     line-height: 20px;
     clear: both;
     margin-bottom: 50px;
+}
+
+.right-about-heading h2, .right-about-heading p {
+    text-align: right;
+}
+
+#welcome {
+    text-align: center;
+    font-size: 300%;
+    margin: 20px 0;
+}
+
+#circle-container {
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border: silver 1px solid;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#circle-cover-bg {
+    background: url(../images/ethos-center-image.jpg) no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
 }
