--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,3 +157,12 @@ hr {
     height: 100%;
     border-radius: 50%;
 }
+
+
+
+#times {
+    background: url(../images/dublin-city.webp) no-repeat center center;
+    background-size: cover;
+    overflow: hidden;
+    width: 100%;
+}
