--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,9 @@ body {
 }
 
 /* fonts for headings and logo */
-h1, h2, h3, #logo{
+h1, h2, #logo{
     font-family: indie flower, sans-serif;
+    text-transform: uppercase;
     letter-spacing: 4px;
 
 }
@@ -158,11 +159,46 @@ hr {
     border-radius: 50%;
 }
 
-
+/* Times */
 
 #times {
     background: url(../images/dublin-city.webp) no-repeat center center;
     background-size: cover;
     overflow: hidden;
     width: 100%;
+}
+
+#times div {
+    color: #fafafa;
+    background-color: rgba(34, 38, 56, 0.6);
+    width: 20%;
+    height: 300px;
+    padding: 30px 0 0 10px;
+    text-align: center;
+    float:left;
+    border: 2px solid #fff;
+    box-sizing: border-box;
+}
+
+/* site links */
+
+footer{
+    height: 150px
+    text-align: center;
+    margin: 0 auto;
+}
+
+.socials {
+    text-align: center;
+}
+
+.socials > li {
+    display: inline;
+}
+
+.socials i {
+    font-size: 160%;
+    margin: 1%;
+    padding: 5%;
+    color: #3a3a3a;
 }
