--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,3 +247,14 @@ footer{
         display: none;
     }
 }
+
+/* for medium screens from 950px and down */
+@media screen and (max-width:1200px) {
+    #menu {
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+}
